Update openAPI docs.
